examples/errors/13_duplicate_field/layout.tml
#use <definitions.tmd>

<Window width={Size x: 1920, x: 1080}/>